dotnet-ci/k8s/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: dotnetci
spec:
  selector:
    matchLabels:
      app: dotnetci
  template:
    metadata:
      labels:
        app: dotnetci
    spec:
      containers:
        - name: dotnetci
          image: cvitaa11/dotnetci:1
          resources:
            limits:
              memory: "128Mi"
              cpu: "500m"
          ports:
            - containerPort: 80

---
apiVersion: v1
kind: Service
metadata:
  name: dotnetci
spec:
  selector:
    app: dotnetci
  ports:
    - port: 80
      targetPort: 80
