dotnet-ci/k8s/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  annotations:
    kubernetes.io/ingress.class: nginx
    nginx.ingress.kubernetes.io/rewrite-target: /$2
  name: myingress
  labels:
    name: myingress
spec:
  rules:
    - host: localhost
      http:
        paths:
          - pathType: Prefix
            path: "/api(/|$)(.*)"
            backend:
              service:
                name: dotnetci
                port:
                  number: 80
